crates/octl-cli/tests/snapshots/help_json__config_help_json.snap
---
source: crates/octl-cli/tests/help_json.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "schema_version_help": 3,
    "command": "orchestratectl config",
    "about": "Inspect configuration: print the config file path (`config path`) or the effective resolved config with per-key source (`config show`)",
    "aliases": [],
    "hidden": false,
    "deprecated": false,
    "flags": [
      {
        "name": "help",
        "long": "help",
        "short": "h",
        "long_aliases": [],
        "short_aliases": [],
        "help": "Print help",
        "value_names": [],
        "takes_value": false,
        "multiple": false,
        "required": false,
        "is_global": false,
        "hidden": false,
        "deprecated": false,
        "defaults": [],
        "accepted_values": [],
        "accepts_file_paths": false,
        "conflicts_with": [],
        "requires": [],
        "required_unless_present": [],
        "arity": {
          "min": 0,
          "max": 0,
          "repeated": false,
          "multi_value": false,
          "require_equals": false
        }
      },
      {
        "name": "json",
        "long": "json",
        "long_aliases": [],
        "short_aliases": [],
        "help": "Emit one pretty JSON document to stdout. Shorthand for `--output json` to stdout",
        "value_names": [],
        "takes_value": false,
        "multiple": false,
        "required": false,
        "is_global": true,
        "hidden": false,
        "deprecated": false,
        "defaults": [
          "false"
        ],
        "accepted_values": [],
        "accepts_file_paths": false,
        "conflicts_with": [],
        "requires": [],
        "required_unless_present": [],
        "arity": {
          "min": 0,
          "max": 0,
          "repeated": false,
          "multi_value": false,
          "require_equals": false
        }
      },
      {
        "name": "output",
        "long": "output",
        "long_aliases": [],
        "short_aliases": [],
        "help": "Output format. `jsonl` (default) emits one compact JSON envelope per line on stdout — AI-first. `json` emits a single pretty document. `text` emits a human-readable summary. A path-shaped value (`./out.json`, `./out.jsonl`) routes the machine envelope to that file (the format is inferred from the extension)",
        "value_names": [
          "FMT|PATH"
        ],
        "takes_value": true,
        "multiple": false,
        "required": false,
        "is_global": true,
        "hidden": false,
        "deprecated": false,
        "defaults": [],
        "accepted_values": [
          "json",
          "jsonl",
          "text"
        ],
        "accepts_file_paths": true,
        "conflicts_with": [],
        "requires": [],
        "required_unless_present": [],
        "arity": {
          "min": 1,
          "max": 1,
          "repeated": false,
          "multi_value": false,
          "require_equals": false
        }
      }
    ],
    "positionals": [],
    "subcommands": [
      {
        "command": "orchestratectl config path",
        "about": "Print the config file location (whether or not the file exists)",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "flags": [
          {
            "name": "help",
            "long": "help",
            "short": "h",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Print help",
            "value_names": [],
            "takes_value": false,
            "multiple": false,
            "required": false,
            "is_global": false,
            "hidden": false,
            "deprecated": false,
            "defaults": [],
            "accepted_values": [],
            "accepts_file_paths": false,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 0,
              "max": 0,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          },
          {
            "name": "json",
            "long": "json",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Emit one pretty JSON document to stdout. Shorthand for `--output json` to stdout",
            "value_names": [],
            "takes_value": false,
            "multiple": false,
            "required": false,
            "is_global": true,
            "hidden": false,
            "deprecated": false,
            "defaults": [
              "false"
            ],
            "accepted_values": [],
            "accepts_file_paths": false,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 0,
              "max": 0,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          },
          {
            "name": "output",
            "long": "output",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Output format. `jsonl` (default) emits one compact JSON envelope per line on stdout — AI-first. `json` emits a single pretty document. `text` emits a human-readable summary. A path-shaped value (`./out.json`, `./out.jsonl`) routes the machine envelope to that file (the format is inferred from the extension)",
            "value_names": [
              "FMT|PATH"
            ],
            "takes_value": true,
            "multiple": false,
            "required": false,
            "is_global": true,
            "hidden": false,
            "deprecated": false,
            "defaults": [],
            "accepted_values": [
              "json",
              "jsonl",
              "text"
            ],
            "accepts_file_paths": true,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 1,
              "max": 1,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          }
        ],
        "positionals": [],
        "subcommands": []
      },
      {
        "command": "orchestratectl config show",
        "about": "Print the effective resolved configuration with a per-key source (`env | file | default`). Secret-valued keys are redacted unless `--show-secrets` is given",
        "aliases": [],
        "hidden": false,
        "deprecated": false,
        "flags": [
          {
            "name": "help",
            "long": "help",
            "short": "h",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Print help",
            "value_names": [],
            "takes_value": false,
            "multiple": false,
            "required": false,
            "is_global": false,
            "hidden": false,
            "deprecated": false,
            "defaults": [],
            "accepted_values": [],
            "accepts_file_paths": false,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 0,
              "max": 0,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          },
          {
            "name": "json",
            "long": "json",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Emit one pretty JSON document to stdout. Shorthand for `--output json` to stdout",
            "value_names": [],
            "takes_value": false,
            "multiple": false,
            "required": false,
            "is_global": true,
            "hidden": false,
            "deprecated": false,
            "defaults": [
              "false"
            ],
            "accepted_values": [],
            "accepts_file_paths": false,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 0,
              "max": 0,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          },
          {
            "name": "output",
            "long": "output",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Output format. `jsonl` (default) emits one compact JSON envelope per line on stdout — AI-first. `json` emits a single pretty document. `text` emits a human-readable summary. A path-shaped value (`./out.json`, `./out.jsonl`) routes the machine envelope to that file (the format is inferred from the extension)",
            "value_names": [
              "FMT|PATH"
            ],
            "takes_value": true,
            "multiple": false,
            "required": false,
            "is_global": true,
            "hidden": false,
            "deprecated": false,
            "defaults": [],
            "accepted_values": [
              "json",
              "jsonl",
              "text"
            ],
            "accepts_file_paths": true,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 1,
              "max": 1,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          },
          {
            "name": "show_secrets",
            "long": "show-secrets",
            "long_aliases": [],
            "short_aliases": [],
            "help": "Reveal secret-valued keys instead of redacting them. Emits a warning to stderr. No config key is secret today, so this is a forward-compatible no-op on the current surface",
            "value_names": [],
            "takes_value": false,
            "multiple": false,
            "required": false,
            "is_global": false,
            "hidden": false,
            "deprecated": false,
            "defaults": [
              "false"
            ],
            "accepted_values": [],
            "accepts_file_paths": false,
            "conflicts_with": [],
            "requires": [],
            "required_unless_present": [],
            "arity": {
              "min": 0,
              "max": 0,
              "repeated": false,
              "multi_value": false,
              "require_equals": false
            }
          }
        ],
        "positionals": [],
        "subcommands": []
      }
    ]
  },
  "warnings": []
}
